--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "prettier": "^2.3.1",
     "prisma": "^2.25.0",
     "typescript": "^4.3.4"
+  },
+  "dependencies": {
+    "@prisma/client": "^2.25.0"
   }
 }
