Create a user with prisma client. Prettier update

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "semi": true,
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "trailingComma": "es5",
   "singleQuote": false,
   "printWidth": 80,
