--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
     "build": "npm run clean && tsc",
-    "serve": "npm run build && node dist/server.js",
+    "serve": "npm run build && node dist/src/server.js",
     "prisma": "node_modules/.bin/prisma",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -32,7 +32,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.1",
-    "prisma": "^2.25.0",
+    "prisma": "^2.29.1",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   },
