Update script with tsconfig paths

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src/**/*.ts",
     "format": "eslint src/**/*.ts --fix",
     "build": "npm run clean && tsc",
-    "serve": "npm run build && node dist/src/server.js",
+    "serve": "npm run build && node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/src/server.js",
     "prisma": "node_modules/.bin/prisma",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -34,6 +34,7 @@
     "prettier": "^2.3.1",
     "prisma": "^3.2.1",
     "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.3.4"
   },
   "dependencies": {
