Added connection pool configurations

--- a/.env.dist
+++ b/.env.dist
@@ -11,5 +11,10 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=password
 DB_NAME=prisma
+
+# Connection Pool Configurations
+connection_limit=10
+pool_timeout=10
+
 # Variables expanded using format specified in dotenv-expand (https://github.com/motdotla/dotenv-expand)
-DATABASE_URL=${DB_TYPE}://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+DATABASE_URL=${DB_TYPE}://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?connection_limit=${connection_limit}&pool_timeout=${pool_timeout}
