--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
   },
   "dependencies": {
     "@prisma/client": "^3.2.1"
+  },
+  "prisma": {
+    "seed": "ts-node -r tsconfig-paths/register prisma/seed.ts"
   }
 }
